--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,10 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
+lib_deps = 
+	WiFi
+	WiFiClientSecure
+	WiFiClient
+	WebSocketsClient
+	rlogiacco/Battery Sense@^1.2.0
+	links2004/WebSockets@^2.4.2
